Refactor to /src
Defining Conspiracy separate from registration makes it possible for terminal Pins to import it without causing a cycle

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </template>
 
   <script type="module">
-    import Conspiracy from "./conspiracy.js";
+    import { Conspiracy } from "./src/index.js";
 
     var root = document.querySelector(".root");
     var template = document.querySelector("template");
