Only re-render relevant pins from handleEvent

--- a/demo/audio-player.html
+++ b/demo/audio-player.html
@@ -73,7 +73,7 @@ h4 {
   :on.canplay.composed="audioevent"
   :on.load.composed="audioevent"
 ></audio>
-<b class="title"><!-- :state.currentItem.title --></b>
+<b class="title"><!-- :state.currentItem.title --> <!-- :state.live.value.count --></b>
 <div class="controls">
   <button
     :on.click.composed="playaudio"
