Add property pin

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ var clocks = [
 var thereTemplate = Conspiracy.fromString(`
 <div class="location">
   <h2><!-- text:label --></h2>
-  <clock-face attr:offset="offset"></clock-face>
+  <clock-face attr:offset="offset" prop:offsetValue="offset"></clock-face>
 </div>
 `);
 
