--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
       <h1>Chicago</h1>
       <clock-face></clock-face>
     </div>
-    <div ref:there class="there"></div>
+    <div ref:there class="there">
+      <div class="location" each:="clocks">
+        <h2><!-- text:label --></h2>
+        <clock-face attr:offset="offset" prop:offsetValue="offset"></clock-face>
+      </div>
+    </div>
   </div>
 </template>
 
@@ -152,22 +157,11 @@ class ClockFace extends ConspiracyElement {
 
 customElements.define("clock-face", ClockFace);
 
-var app = new Conspiracy(multiple).renderTo(host);
-
 var clocks = [
   { label: "Washington", offset: +1 },
   { label: "Seattle", offset: -2 },
   { label: "Barcelona", offset: +7 }
 ];
-
-var thereTemplate = Conspiracy.fromString(`
-<div class="location">
-  <h2><!-- text:label --></h2>
-  <clock-face attr:offset="offset" prop:offsetValue="offset"></clock-face>
-</div>
-`);
-
-app.refs.there.replaceChildren(...clocks.map(c => thereTemplate.renderDOM(c)))
-
+var app = new Conspiracy(multiple).renderTo(host, { clocks });
 
 </script>
